2006-04-26  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaTryComponentAlphaHelper), (exaComposite),
	(exaGlyphs):
	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrCheckComposite):
	Add a helper for the Component Alpha Over case, which breaks the
	operation down into an OutReverse and an Add.  Turn off the fallback to
	software glyphs when component alpha, now that we expect all (new)
	drivers to be able to support it.  Also, make Xephyr fall back in the CA
	Over case to exercise this code.  This speeds up my rgb24text and
	ls -lR in gnome-terminal by a factor of 5.

2006-04-26  Dave Airlie <airlied@linux.ie>

	* hw/xfree86/os-support/bus/Pci.c: (pciSetOSBIOSPtr),
	(HandlePciBios):
	* hw/xfree86/os-support/bus/Pci.h:
	* hw/xfree86/os-support/bus/linuxPci.c: (linuxPciInit),
	(linuxPciHandleBIOS):
	Bug #6751: Use the Linux PCI ROM interface on Linux properly
	The old domain code, still modified BARs not a good idea,
	Just talk to sysfs, if 0 read, fallback to old methods.

2006-04-26  Dave Airlie <airlied@linux.ie>

	* hw/xfree86/common/xf86pciBus.c:
	* hw/xfree86/os-support/shared/stdResource.c:
	(xf86StdAccResFromOS):
	Bug #6750: This patch detects Intel bridges that are transparent
	but aren't reported as such. From the Linux kernel fixups.
	This patch also removes the reserved BIOS area from the
	area to allocate resources in.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaPixmapSave), (exaMoveInPixmap),
	(exaMoveOutPixmap):
	Improve the migration debugging output.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaGlyphsIntersect):
	Fix a bug in the intersection computation that could concievably cause
	incorrect results to be returned (but would probably usually be
	over-conservative).

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaGlyphsIntersect), (exaGlyphs):
	Bug #4668: Check if the lists of glyphs don't have any intersecting